[package]
name = "arrow-flight-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[dependencies]
tonic = { version="0.8.3"}
prost = { version="0.11.6"}
tokio = { version="1.24.1", features = ["rt-multi-thread"]}

[build-dependencies]
tonic-build = { version="0.8.4" }
